sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:16: error: not found: value fin
    fin=false;
    ^AlgGnomeSort:17: error: not found: value fin
    while(fin!=true || i>=1){
          ^AlgGnomeSort:23: error: not found: value fin
        fin=true;
        ^