sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var i=0;
  while(i!=getNombreValeurs()-1){
    var fin1=false;
    while(fin1!=true){
      if(plusPetit(i, i+1)){
        i=i+1
      }
      else{
        echange(i,i+1);
        fin1=true;
        i=i-1
      }
    }
    fin=false;
    while(fin!=true || i>=1){
      if(plusPetit(i-1, i)){
        i=i-1
      }
      else{
        echange(i,i-1);
        fin=true;
        i=i+1
      }
    }
  }
}